# multiagent-ecommerce

./: README.md  main.py  pyproject.toml
config/: __init__.py  settings.py
data/: evaluations.db
docs/: Sistema multi-agente baseado em LLMs para avaliação de promoções em e-commerce_ simulação de perfis psicológicos de compradores.docx
outputs/tables/: mongo_adv_bigramas_recomendacao.csv  mongo_adv_concordancia_modelos.csv  mongo_adv_diversidade_lexical.csv  mongo_adv_inferencia_modelos.csv  mongo_adv_inventario_falhas.csv  mongo_adv_performance_segmentada.csv  mongo_adv_validacao_ground_truth.csv  mongo_tabela_recomendacao_metricas.csv  mongo_tabela_termos_consenso.csv  mongo_tabela_top_termos_por_perfil.csv  tabela_concordancia_modelos.csv  tabela_metricas_agregadas.csv  tabela_resumo_execucoes.csv  tabela_score_por_perfil.csv  tabela_status_distribuicao.csv  top30_consenso_cross_model.csv  top30_correlacao_entre_modelos.csv  top30_intersecao_por_perfil.csv  top30_ranking_por_perfil_modelo.csv
scripts/: analyze_mongo_advanced.py  analyze_mongo_results.py  analyze_results.py  analyze_top_n_correlation.py
src/: __init__.py
src/agents/: __init__.py  anxious_buyer.py  demanding_buyer.py  economic_buyer.py  impulsive_buyer.py  rational_buyer.py
src/core/: __init__.py  base_agent.py  llm_client.py  orchestrator.py
src/data/: __init__.py  loader.py  preprocessor.py  schemas.py
src/database/: __init__.py  connection.py  mongo_repository.py  repository.py  schema.py
src/evaluation/: __init__.py  analyzer.py  metrics.py  profile_blender.py
src/recommendations/: __init__.py  engine.py  seller_message.py
